cmake_minimum_required(VERSION 3.22)
project(FeatureDetection)

set(CMAKE_CXX_STANDARD 14 "${CMAKE_CXX_STANDARD} -O0")
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable(FeatureDetection main.cpp)
add_executable(FeatureDetectionSURF SURF.cpp)
add_executable(FeatureDetectionFAST FAST.cpp)
add_executable(FeatureDetectionCanny cany.cpp)
add_executable(FeatureDetectionDilation dilation.cpp)
add_executable(FeatureDetectionMasking masking.cpp)
add_executable(FeatureDetectionpipeline pipeline.cpp)
add_executable(FeatureDetectionDownsize downsize.cpp)
target_link_libraries( FeatureDetection ${OpenCV_LIBS} )
target_link_libraries(FeatureDetectionSURF ${OpenCV_LIBS})
target_link_libraries(FeatureDetectionFAST ${OpenCV_LIBS})
target_link_libraries(FeatureDetectionCanny ${OpenCV_LIBS})
target_link_libraries(FeatureDetectionDilation ${OpenCV_LIBS})
target_link_libraries(FeatureDetectionMasking ${OpenCV_LIBS})
target_link_libraries(FeatureDetectionpipeline ${OpenCV_LIBS})
target_link_libraries(FeatureDetectionDownsize ${OpenCV_LIBS})


